# rust-slack-sdk

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  clippy.toml
.cargo/: config.toml
benches/: block_kit_serialization.rs  web_client.rs
examples/: basic_bot.rs.txt  block_kit_builder.rs.txt  oauth_app.rs.txt  socket_mode_app.rs.txt  webhook_handler.rs.txt
src/: constants.rs  error.rs  lib.rs  logging.rs
src/audit_logs/: client.rs  mod.rs  models.rs
src/http_retry/: handler.rs  interval.rs  mod.rs  state.rs
src/models/: elements.rs  mod.rs  objects.rs  views.rs
src/models/blocks/: actions.rs  context.rs  divider.rs  header.rs  image.rs  input.rs  mod.rs  section.rs
src/oauth/: authorize_url_generator.rs  mod.rs  models.rs  token_rotation.rs
src/oauth/installation_store/: cache.rs  file.rs  mod.rs  sqlite.rs
src/oauth/state_store/: cache.rs  file.rs  mod.rs
src/scim/: client.rs  mod.rs  models.rs
src/signature/: mod.rs
src/socket_mode/: client.rs  connection.rs  mod.rs  types.rs
src/web/: async_client.rs  client.rs  internal_utils.rs  mod.rs  response.rs
src/webhook/: mod.rs
tests/: web_client_tests.rs
tests/integration/: end_to_end.rs  mod.rs
