[package]
name = "slack-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Slack SDK Contributors"]
description = "Rust port of the Slack SDK for Rust developers"
license = "MIT"
repository = "https://github.com/slackapi/slack-rs"
keywords = ["slack", "api", "sdk", "chat", "bot"]
categories = ["api-bindings", "web-programming"]

[dependencies]
# HTTP client with all features
reqwest = { version = "0.12", features = [
    "json",
    "multipart",
    "stream",
    "blocking",
    "gzip",
    "brotli",
    "deflate"
] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# WebSocket
tokio-tungstenite = "0.24"

# Cryptography (for signature verification)
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Utilities
url = "2.5"
bytes = "1.7"
futures = "0.3"
uuid = { version = "1.10", features = ["v4"] }
rand = "0.8"
async-trait = "0.1"

# Logging (mirroring Python SDK logging patterns)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
log = "0.4"

# HTTP server for mock testing
axum = "0.7"
tower = "0.5"
tower-http = "0.6"

# Database support for OAuth storage
rusqlite = { version = "0.32", optional = true }
sqlx = { version = "0.8", optional = true, features = ["runtime-tokio", "sqlite", "postgres", "mysql"] }

# AWS S3 support for OAuth storage
aws-sdk-s3 = { version = "1.50", optional = true }
aws-config = { version = "1.5", optional = true }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# System information
os_info = "3.8"
rustc_version_runtime = "0.3"

[dev-dependencies]
# Testing frameworks
wiremock = "0.6"
tokio-test = "0.4"
assert-json-diff = "2.0"
pretty_assertions = "1.4"
test-case = "3.3"
proptest = "1.4"
rand = "0.8"

# Test utilities
tempfile = "3.12"
mockall = "0.13"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[features]
default = ["sqlite"]
full = ["sqlite", "postgres", "mysql", "s3"]
sqlite = ["rusqlite"]
postgres = ["sqlx/postgres"]
mysql = ["sqlx/mysql"]
s3 = ["aws-sdk-s3", "aws-config"]

[[bench]]
name = "web_client"
harness = false

[[bench]]
name = "block_kit_serialization"
harness = false
